--- a/metaphlan2/Dockerfile
+++ b/metaphlan2/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get update && apt-get install -y \
 RUN python -m pip install --upgrade pip && pip install 'setuptools >=14.0' \
   && pip install msgpack
 
-RUN hg clone https://bitbucket.org/biobakery/metaphlan2 /src/metaphlan2 \
+RUN hg clone https://bitbucket.org/biobakery/metaphlan2 /src/metaphlan2 \\
   && cd /src/metaphlan2 \
   && hg up 2.7.63 \
   && ./metaphlan2.py --install \
