Add biom python package to metaphlan2

--- a/metaphlan2/Dockerfile
+++ b/metaphlan2/Dockerfile
@@ -5,6 +5,7 @@ RUN apt-get update && apt-get install -y \
     python-pandas \
     python-pip \
     python-biopython \
+    python-biom-format \
     bowtie2 \
     mercurial 
 
