--- a/metaphlan2/Dockerfile
+++ b/metaphlan2/Dockerfile
@@ -17,5 +17,9 @@ RUN hg clone https://bitbucket.org/biobakery/metaphlan2 /src/metaphlan2 \
   && hg up 2.7.63 \
   && ./metaphlan2.py --install \
   && cd /
-  
+
+RUN wget https://raw.githubusercontent.com/compmetagen/metashot/master/metaphlan2/merge_metaphlan_tables.py \
+  && cp merge_metaphlan_tables.py /src/metaphlan2/utils \
+  && chmod +x /src/metaphlan2/utils/merge_metaphlan_tables.py
+
 ENV PATH=$PATH:/src/metaphlan2:/src/metaphlan2/utils:/src/metaphlan2/utils/hclust2
