--- a/metaphlan2/Dockerfile
+++ b/metaphlan2/Dockerfile
@@ -19,7 +19,7 @@ RUN hg clone https://bitbucket.org/biobakery/metaphlan2 /src/metaphlan2 \
   && cd /
 
 RUN apt-get install -y \
-  wget \
+  wget 
 
 RUN wget https://raw.githubusercontent.com/compmetagen/metashot/master/metaphlan2/merge_metaphlan_tables.py \
   && cp merge_metaphlan_tables.py /src/metaphlan2/utils \
