Now working with samtools

--- a/metaphlan2/Dockerfile
+++ b/metaphlan2/Dockerfile
@@ -8,13 +8,15 @@ RUN apt-get update && apt-get install -y \
     python-biom-format \
     bowtie2 \
     muscle \
-    bcftools \
     ncbi-blast+ \
     raxml \
     wget \
     mercurial \
     build-essential \
-    libncurses5-dev
+    libncurses5-dev \
+    libbz2-dev \
+    liblzma-dev \
+    zlib1g-dev
 
 RUN python -m pip install --upgrade pip && pip install 'setuptools >=14.0' \
   && pip install msgpack \
@@ -22,12 +24,6 @@ RUN python -m pip install --upgrade pip && pip install 'setuptools >=14.0' \
 
 RUN wget http://sourceforge.net/projects/samtools/files/samtools/0.1.19/samtools-0.1.19.tar.bz2 \
   && tar -xvjf ./samtools-0.1.19.tar.bz2 \
-  && wget http://www.zlib.net/zlib-1.2.11.tar.gz \
-  && tar -xvzf ./zlib-1.2.11.tar.gz \
-  && cd zlib-1.2.11 \
-  && ./configure --prefix=. \
-  && cp ./zlib.h ./samtools-0.1.19 \
-  && cp ./zconf.h ./samtools-0.1.19 \
   && cd /samtools-0.1.19 \
   && make \
   && cd /
@@ -38,4 +34,4 @@ RUN hg clone https://bitbucket.org/biobakery/metaphlan2 /src/metaphlan2 \
   && ./metaphlan2.py --install \
   && cd /
 
-ENV PATH=$PATH:/src/metaphlan2:/src/metaphlan2/utils:/src/metaphlan2/utils/hclust2:/samtools-0.1.19
+ENV PATH=$PATH:/src/metaphlan2:/src/metaphlan2/utils:/src/metaphlan2/utils/hclust2:/samtools-0.1.19/:/samtools-0.1.19/bcftools/
