--- a/metaphlan2/Dockerfile
+++ b/metaphlan2/Dockerfile
@@ -20,7 +20,7 @@ RUN apt-get update && apt-get install -y \
 
 RUN python -m pip install 'setuptools >=14.0' \
   && pip install msgpack \
-  && pip install pysam \
+  && pip install pysam
 
 RUN wget http://sourceforge.net/projects/samtools/files/samtools/0.1.19/samtools-0.1.19.tar.bz2 \
   && tar -xvjf ./samtools-0.1.19.tar.bz2 \
