--- a/bowtie2/Dockerfile
+++ b/bowtie2/Dockerfile
@@ -11,7 +11,7 @@ WORKDIR /NGStools/
 ENV work_dir="/NGStools/bowtie2-2.3.4.3"
 
 RUN wget https://sourceforge.net/projects/bowtie-bio/files/bowtie2/2.3.4.3/bowtie2-2.3.4.3-linux-x86_64.zip \
-    unzip bowtie2-2.3.4.3-linux-x86_64.zip \
-    rm -rf bowtie2-2.3.4.3-linux-x86_64.zip
+    && unzip bowtie2-2.3.4.3-linux-x86_64.zip \
+    && rm -rf bowtie2-2.3.4.3-linux-x86_64.zip
 
 ENV PATH="${work_dir}:${PATH}"
