--- a/metaxa2/Dockerfile
+++ b/metaxa2/Dockerfile
@@ -45,12 +45,14 @@ RUN ./autogen.sh && ./configure && make && make install
 WORKDIR /
 RUN rm -rf /tmp/v2.9.1.tar.gz /tmp/vsearch-2.9.1
 
-# Metaxa2'.
+# Metaxa2 v2.2
 RUN wget http://microbiology.se/sw/Metaxa2_2.2.tar.gz \
-  && tar -zxvf Metaxa2_2.2.tar.gz
-WORKDIR Metaxa2_2.2
+    -q -O /tmp/Metaxa2_2.2.tar.gz \
+  && tar -zxvf /tmp/Metaxa2_2.2.tar.gz
+WORKDIR /tmp/Metaxa2_2.2
 RUN wget https://raw.githubusercontent.com/compmetagen/metashot/master/metaxa2/install_metaxa2 \
   && chmod +x install_metaxa2.1 \
   && ./install_metaxa2.1
 WORKDIR /
+RUN rm -rf /tmp/Metaxa2_2.2.tar.gz /tmp/Metaxa2_2.2
 ENV PATH=$PATH:/root/bin
