--- a/metaxa2/Dockerfile
+++ b/metaxa2/Dockerfile
@@ -48,7 +48,7 @@ RUN rm -rf /tmp/v2.9.1.tar.gz /tmp/vsearch-2.9.1
 # Metaxa2 v2.2
 RUN wget http://microbiology.se/sw/Metaxa2_2.2.tar.gz \
     -q -O /tmp/Metaxa2_2.2.tar.gz \
-  && tar -zxvf /tmp/Metaxa2_2.2.tar.gz
+  && tar -zxvf /tmp/Metaxa2_2.2.tar.gz -C /tmp
 WORKDIR /tmp/Metaxa2_2.2
 RUN wget https://raw.githubusercontent.com/compmetagen/metashot/master/metaxa2/install_metaxa2_custom \
   && chmod +x install_metaxa2_custom \
