--- a/bowtie2/Dockerfile
+++ b/bowtie2/Dockerfile
@@ -1,5 +1,13 @@
 FROM debian:stretch
 
 RUN apt-get update && apt-get install -y \
-    bowtie2 
+    zip
 
+# Bowtie v2.3.4.3
+RUN wget https://sourceforge.net/projects/bowtie-bio/files/bowtie2/2.3.4.3/bowtie2-2.3.4.3-linux-x86_64.zip \
+    -q -O /tmp/bowtie2-2.3.4.3-linux-x86_64.zip
+WORKDIR /tmp/
+RUN unzip bowtie2-2.3.4.3-linux-x86_64.zip
+RUN cp bowtie2-2.3.4.3-linux-x86_64/bowtie2* /usr/local/bin
+WORKDIR /
+RUN rm -rf /tmp/bowtie2-2.3.4.3-linux-x86_64.zip /tmp/bowtie2-2.3.4.3-linux-x86_64
