--- a/bowtie2/Dockerfile
+++ b/bowtie2/Dockerfile
@@ -6,6 +6,7 @@ ENV LANG=C.UTF-8
 RUN apt-get update && apt-get install -y \
     zip \
     wget \
+    libsys-hostname-long-perl \
   && rm -rf /var/lib/apt/lists/*
 
 # Bowtie v2.3.4.3
