--- a/vsearch/Dockerfile
+++ b/vsearch/Dockerfile
@@ -3,7 +3,9 @@ FROM debian:9
 ENV LC_ALL=C.UTF-8
 ENV LANG=C.UTF-8
 
-RUN apt-get update && apt-get install -y \
+RUN apt-get update
+
+RUN apt-get install -y \
     build-essential \
     pkg-config \
     automake \
@@ -19,14 +21,16 @@ RUN apt-get update && apt-get install -y \
     liblzma-dev \
     libbz2-dev \
     zlib1g \
-    zlib1g-dev \
-  && rm -rf /var/lib/apt/lists/*
+    zlib1g-dev
 
-# VSEARCH v2.10.2
-RUN wget https://github.com/torognes/vsearch/archive/v2.10.2.tar.gz \
-    -q -O /tmp/v2.10.2.tar.gz \
-  && tar -zxf /tmp/v2.10.2.tar.gz -C /tmp
-WORKDIR /tmp/vsearch-2.10.2
+# VSEARCH v2.10.3
+RUN wget https://github.com/torognes/vsearch/archive/v2.10.3.tar.gz \
+    -q -O /tmp/v2.10.3.tar.gz \
+  && tar -zxf /tmp/v2.10.3.tar.gz -C /tmp
+WORKDIR /tmp/vsearch-2.10.3
 RUN ./autogen.sh && ./configure && make && make install
 WORKDIR /
-RUN rm -rf /tmp/v2.10.2.tar.gz /tmp/vsearch-2.10.2
+
+# Clean 
+RUN rm -rf /tmp/* \
+  && rm -rf /var/lib/apt/lists/*
