--- a/fgmp/Dockerfile
+++ b/fgmp/Dockerfile
@@ -16,6 +16,7 @@ RUN apt-get install -y \
     git \
     cpanminus
 
+RUN cpanm IO::All
 RUN git clone https://github.com/stajichlab/FGMP.git
 WORKDIR /FGMP
 RUN git checkout tags/v1.0.1 \
