--- a/prokka/Dockerfile
+++ b/prokka/Dockerfile
@@ -6,6 +6,7 @@ ENV LANG=C.UTF-8
 RUN apt-get update 
 
 RUN apt-get install -y \
+    build-essential \
     libdatetime-perl \
     libxml-simple-perl \
     libdigest-md5-perl \
@@ -16,8 +17,10 @@ RUN apt-get install -y \
 
 # prokka v1.13.4
 RUN cpanm Bio::Perl
-RUN git clone https://github.com/tseemann/prokka.git /prokka \
-    && git checkout tags/v1.13.4
+RUN git clone https://github.com/tseemann/prokka.git /prokka
+WORKDIR /prokka
+RUN git checkout tags/v1.13.4
+WORKDIR /
 ENV PATH="/prokka/bin/:$PATH"
 RUN prokka --setupdb
 
