--- a/wgd/Dockerfile
+++ b/wgd/Dockerfile
@@ -36,8 +36,8 @@ WORKDIR /tmp/
 RUN tar -zxvf i-adhore-3.0.01.tar.gz
 WORKDIR /tmp/i-adhore-3.0.01
 RUN mkdir build && cd build && cmake .. -DCMAKE_INSTALL_PREFIX=/usr/local/bin/i-adhore
-RUN make
-RUN make install
+WORKDIR /tmp/i-adhore-3.0.01/build
+RUN make && make install
 ENV PATH="/usr/local/bin/i-adhore/bin:$PATH"
 WORKDIR /
 
