--- a/samtools/Dockerfile
+++ b/samtools/Dockerfile
@@ -3,4 +3,5 @@ FROM debian:stretch
 RUN apt-get update && apt-get install -y \
     samtools \
     bcftools \
+    tabix \
   && rm -rf /var/lib/apt/lists/*
