--- a/samtools/Dockerfile
+++ b/samtools/Dockerfile
@@ -4,4 +4,5 @@ RUN apt-get update && apt-get install -y \
     samtools \
     bcftools \
     tabix \
+    bedtools \
   && rm -rf /var/lib/apt/lists/*
