adding eukrep support
Signed-off-by: claudio donati <donatic@claudios-MacBook-Pro.local>

--- a/eukcc/Dockerfile
+++ b/eukcc/Dockerfile
@@ -29,6 +29,7 @@ RUN conda install -c etetoolkit -c anaconda ete3 pyqt>5
 
 # EukCC
 RUN pip3 install --upgrade pip
+RUN pip3 install EukRep
 RUN pip3 install PyQt5
 WORKDIR /tmp
 RUN git clone https://github.com/Finn-Lab/EukCC
