--- a/bowtie2/Dockerfile
+++ b/bowtie2/Dockerfile
@@ -1,20 +1,14 @@
-FROM debian:stretch
+FROM debian:10.2
 
-ENV LC_ALL=C.UTF-8
 ENV LANG=C.UTF-8
 
-RUN apt-get update && apt-get install -y \
-    zip \
-    wget \
-    libsys-hostname-long-perl \
-    python \
-  && rm -rf /var/lib/apt/lists/*
+ENV VERSION=2.3.4.3-1
 
-# Bowtie v2.3.4.3
-RUN wget https://sourceforge.net/projects/bowtie-bio/files/bowtie2/2.3.4.3/bowtie2-2.3.4.3-linux-x86_64.zip \
-    -q -O /tmp/bowtie2-2.3.4.3-linux-x86_64.zip
-WORKDIR /tmp/
-RUN unzip bowtie2-2.3.4.3-linux-x86_64.zip
-RUN cp bowtie2-2.3.4.3-linux-x86_64/bowtie2* /usr/local/bin
-WORKDIR /
-RUN rm -rf /tmp/bowtie2-2.3.4.3-linux-x86_64.zip /tmp/bowtie2-2.3.4.3-linux-x86_64
+RUN apt-get update
+
+RUN apt-get -y install \
+  perl \
+  bowtie2=${VERSION}
+
+RUN rm -rf /tmp/* \
+  && rm -rf /var/lib/apt/lists/*
