--- a/metabat2/Dockerfile
+++ b/metabat2/Dockerfile
@@ -1,19 +1,29 @@
-FROM debian:stretch
+FROM debian:10.2
 
-ENV LC_ALL=C.UTF-8
 ENV LANG=C.UTF-8
 
-RUN apt-get update && apt-get install -y \
-    tar \
-    wget \
-  && rm -rf /var/lib/apt/lists/*
+ENV VERSION=2.12.1
 
-# MetaBAT v2.12.1
-RUN wget https://bitbucket.org/berkeleylab/metabat/downloads/metabat-static-binary-linux-x64_v2.12.1.tar.gz \
-    -q -O /tmp/metabat-static-binary-linux-x64_v2.12.1.tar.gz \
-  && tar -zxf /tmp/metabat-static-binary-linux-x64_v2.12.1.tar.gz -C /tmp
-RUN cp -r /tmp/metabat /usr/local/bin/metabat
-ENV PATH=$PATH:/usr/local/bin/metabat
-RUN chmod +rx /usr/local/bin/metabat # for singularity
-RUN chmod +rx /usr/local/bin/metabat/* # for singularity
-RUN rm -rf /tmp/metabat-static-binary-linux-x64_v2.12.1.tar.gz /tmp/metabat
+RUN apt-get update
+
+RUN apt-get -y install \
+  curl
+
+RUN mkdir -p /usr/local/metabat2
+WORKDIR /usr/local/metabat2
+RUN curl -s -L https://bitbucket.org/berkeleylab/metabat/downloads/metabat-static-binary-linux-x64_v${VERSION}.tar.gz | \
+    tar -zxf - --strip-components=1
+    
+# metabat2 excutables are not r-x for all, this causes problems in azure/shipyard
+RUN chmod +rx \
+  metabat* \
+  runMetaBat.sh \
+  jgi_summarize_bam_contig_depths \
+  contigOverlaps \
+  aggregateContigOverlapsByBin.pl \
+  aggregateBinDepths.pl  
+WORKDIR /
+ENV PATH="/usr/local/metabat2:${PATH}"
+
+RUN rm -rf /tmp/* \
+  && rm -rf /var/lib/apt/lists/*
