--- a/dockerfiles/sra-toolkit/Dockerfile
+++ b/dockerfiles/sra-toolkit/Dockerfile
@@ -17,10 +17,14 @@ RUN mkdir -p /usr/local/ncbi/sra-toolkit
 WORKDIR /usr/local/ncbi/sra-toolkit
 RUN curl -s https://ftp-trace.ncbi.nlm.nih.gov/sra/sdk/${VERSION}/sratoolkit.${VERSION}-ubuntu64.tar.gz | \
     tar -zxf - --strip-components=1
+WORKDIR /usr/local/ncbi/sra-toolkit/bin
+ADD init.sh init_cloud.sh ./
+RUN chmod +x init.sh init_cloud.sh
 WORKDIR /
 ENV PATH="/usr/local/ncbi/sra-toolkit/bin:${PATH}"
-RUN mkdir /root/.ncbi/
-RUN printf '/LIBS/GUID = "%s"\n' `uuidgen` > /root/.ncbi/user-settings.mkfg
+
+
+
 
 RUN rm -rf /tmp/* \
   && rm -rf /var/lib/apt/lists/*
