kraken2: python2.7 added (required by bracken)

--- a/dockerfiles/kraken2/Dockerfile
+++ b/dockerfiles/kraken2/Dockerfile
@@ -11,7 +11,8 @@ RUN apt-get update
 
 RUN apt-get -y install \
   curl \
-  build-essential
+  build-essential \
+  python2.7
 
 ENV KRAKEN2_DIR=/usr/local/kraken2
 
