--- a/dockerfiles/checkm/Dockerfile
+++ b/dockerfiles/checkm/Dockerfile
@@ -1,8 +1,6 @@
-FROM debian:10.2
+FROM metashot/base:1.0
 
 ADD VERSION .
-
-ENV LANG=C.UTF-8
 
 ENV PRODIGAL_VERSION=1:2.6.3-4
 ENV HMMER_VERSION=3.2.1+dfsg-1
