--- a/dockerfiles/htslib/Dockerfile
+++ b/dockerfiles/htslib/Dockerfile
@@ -1,8 +1,6 @@
-FROM debian:10.2
+FROM metashot/base:1.0
 
 ADD VERSION .
-
-ENV LANG=C.UTF-8
 
 ENV SAMTOOLS_VERSION=1.9-4
 ENV TABIX_VERSION=1.9-11
